// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Column Basic 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,35%);
  border: none;
  background: hsl(210,80%,95%);
  border-radius: 4px;
}

.c1:hover {
  background: hsl(210,55%,80%);
}

.c1:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c1:active {
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.c1:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > * + * {
  margin-top: 4px;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    button 1
  </button>
  <button
    className="c1"
  >
    button 2
  </button>
  <button
    className="c1"
  >
    button 3
  </button>
</div>
`;

exports[`Storyshots Layout/Column Custom Gutter 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,35%);
  border: none;
  background: hsl(210,80%,95%);
  border-radius: 4px;
}

.c1:hover {
  background: hsl(210,55%,80%);
}

.c1:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c1:active {
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.c1:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > * + * {
  margin-top: 20px;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    button 1
  </button>
  <button
    className="c1"
  >
    button 2
  </button>
  <button
    className="c1"
  >
    button 3
  </button>
</div>
`;

exports[`Storyshots Layout/Column Spaced 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,35%);
  border: none;
  background: hsl(210,80%,95%);
  border-radius: 4px;
}

.c1:hover {
  background: hsl(210,55%,80%);
}

.c1:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c1:active {
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.c1:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
}

.c0 > * + * {
  margin-top: 4px;
}

<div
  style={
    Object {
      "height": 500,
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="c1"
    >
      button 1
    </button>
    <button
      className="c1"
    >
      button 2
    </button>
    <button
      className="c1"
    >
      button 3
    </button>
  </div>
</div>
`;
